2009-12-06  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed @expand_power action on fractional powers.

2009-12-02  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed display of commutators (duplicate second part).

2009-08-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed compilation problem on OS X.

2009-08-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.16

	* Fixed a problem with prod-sorting of two neighbouring objects
	with non-contracted implicit indices.

	* Fixed split-view operation of the GUI.

2009-08-21  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed handling of Accents in the new output routines.

2009-08-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.15

2009-07-24  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Started refactoring the output in Mathematica and Maple formats.

2009-07-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed handling of and recovering from LaTeX errors.

	* Catch more LaTeX errors with user-understandable error dialog
	(in particular double super/sub script).

	* Fixed a cell-focus bug.

2009-07-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.14

	* Fixed buffer underrun problem in the kernel, which would cut
	input and insert bogus newline characters.

2009-07-17  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.13

	* Disabled word-wrapping in input cells to prevent gtk from
	messing up input at non-symbol boundaries. Added horizontal scroll
	bar. 

2009-06-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added safeguard against overwriting existing notebook files.

2009-06-19  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed single-factor object pattern replacement bug.

2009-06-15  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Faster TeX engine and window reflow on resize added.

2009-06-05  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made @rename_dummies act on single factor terms (traces).
