@@ -60,7 +60,7 @@
         <td class="issuerelease">
           
             
-            <a href="release-1.17.html">1.17</a>
+            <a href="release-1.18.html">1.18</a>
           
         </td>
       
@@ -515,7 +515,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img alt="fixed" src="green-check.png" title="fixed"/> </td>
       <td class="littledate">2008-11-14</td>
       <td class="issuename">
         <a href="issue-becb40c03914860dbc07ef30bb8fb898a9089a73.html">@eliminate_kr does not work on sums</a>
