@@ -20,16 +20,16 @@
     
       
       <tr><td>
-        <a href="release-1.17.html">1.17</a>
+        <a href="release-1.18.html">1.18</a>
         </td>
         <td>
         
-          <span class='progress-meter'><span class='progress-meter-done'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class='progress-meter-undone'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-          86% complete
+          <span class='progress-meter'><span class='progress-meter-done'></span><span class='progress-meter-undone'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
+          0% complete
           </td>
           </tr><tr><td></td><td>
-          6 / 7 issues.
-          <a href="release-1.17.html">See issues &raquo;</a>
+          0 / 1 issues.
+          <a href="release-1.18.html">See issues &raquo;</a>
         
         </td>
       </tr>
@@ -42,6 +42,8 @@
 
   <table>
     <tbody>
+    
+      <tr><td><a href="release-1.17.html">1.17</a></td><td class="littledate">on 2010-01-28</td></tr>
     
       <tr><td><a href="release-1.15.html">1.15</a></td><td class="littledate">on 2009-08-18</td></tr>
     
@@ -61,7 +63,7 @@
 
 <p>
   
-    <a href="unassigned.html">32 unassigned issues</a> (24 open).
+    <a href="unassigned.html">32 unassigned issues</a> (23 open).
   
 </p>
 
@@ -71,6 +73,24 @@
 
 <table class="log">
   <tbody>
+  
+    <tr class="even-row">
+      <td class="date">2010-01-28</td>
+      <td class="issuename">
+        <a href="issue-a2bec73e247cc89c7cfca20ee457e5295de9475e.html">Deleting last cell of notebook sometimes produces warnings</a> 
+      </td>
+      <td> assigned to release 1.18 from 1.17 </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="odd-row">
+      <td class="date">2010-01-28</td>
+      <td class="issuename">
+        <a href="issue-becb40c03914860dbc07ef30bb8fb898a9089a73.html">@eliminate_kr does not work on sums</a> <img class="inline-status-image" alt="fixed" src="green-check.png" title="fixed"/>
+      </td>
+      <td> closed with disposition fixed </td>
+    </tr>
+    <tr><td></td></tr>
   
     <tr class="even-row">
       <td class="date">2010-01-23</td>
@@ -139,24 +159,6 @@
       <td class="date">2009-11-18</td>
       <td class="issuename">
         <a href="issue-c6f19ea6617d8186461181296226988ae7111708.html">Numerical indices default to position=free.</a> 
-      </td>
-      <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="even-row">
-      <td class="date">2009-11-18</td>
-      <td class="issuename">
-        <a href="issue-d3968c05090854806ec986d696e99a887d458b18.html">Fix dependence on numbers</a> 
-      </td>
-      <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="odd-row">
-      <td class="date">2009-11-16</td>
-      <td class="issuename">
-        <a href="issue-a2bec73e247cc89c7cfca20ee457e5295de9475e.html">Deleting last cell of notebook sometimes produces warnings</a> 
       </td>
       <td> created </td>
     </tr>
