@@ -64,8 +64,8 @@
     <tr>
       <td class="attrname">Status:</td>
       <td class="attrval">
-        unstarted
-        
+        closed: fixed
+        <img class="inline-status-image" alt="fixed" src="green-check.png" title="fixed"/>
       </td>
     </tr>
 
@@ -81,6 +81,18 @@
   <tbody>
   
     <tr class="even-row">
+      <td class="date">2010-01-28 13:40 GMT</td>
+      <td class="person">Kasper Peeters &lt;kasper.peeters@...&gt;</td>
+      <td class="message">closed with disposition fixed</td>
+    </tr>
+    
+      <tr><td colspan="3" class="logcomment">
+      Fixed in 1.18.
+      </td></tr>
+    
+    <tr><td></td></tr>
+  
+    <tr class="odd-row">
       <td class="date">2008-11-14 10:11 GMT</td>
       <td class="person">Kasper Peeters &lt;kasper.peeters@...&gt;</td>
       <td class="message">created</td>
