@@ -394,7 +394,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img alt="fixed" src="green-check.png" title="fixed"/> </td>
       <td class="littledate">2008-11-14</td>
       <td class="issuename">
         <a href="issue-becb40c03914860dbc07ef30bb8fb898a9089a73.html">@eliminate_kr does not work on sums</a>
